[gd_scene load_steps=35 format=3 uid="uid://rp20tftdqbrk"]

[ext_resource type="Script" path="res://scenes/user_interface/main_menu.gd" id="1_pguvi"]
[ext_resource type="Texture2D" uid="uid://d252ia5kwpfkl" path="res://graphics/background/main-menu/main-menu-00.png" id="2_2fbo2"]
[ext_resource type="Texture2D" uid="uid://cpvqrhpeq7t6a" path="res://graphics/lyza/lyza2.png" id="2_6x2kw"]
[ext_resource type="Texture2D" uid="uid://bmqfbm0jqmj0g" path="res://graphics/ui/leftstick.png" id="2_untr7"]
[ext_resource type="Texture2D" uid="uid://cfp0c2o8mbsmu" path="res://graphics/ui/xbutton.png" id="3_6x0ik"]
[ext_resource type="Texture2D" uid="uid://c5vp88o53lmwm" path="res://graphics/ui/wasd.png" id="3_7t30x"]
[ext_resource type="Texture2D" uid="uid://rpqujhrc8m6s" path="res://graphics/ui/abutton.png" id="4_cdgbd"]
[ext_resource type="Texture2D" uid="uid://c46fh8ivid0ov" path="res://graphics/ui/mouse1.png" id="5_trpwk"]
[ext_resource type="Texture2D" uid="uid://cejboeclilun8" path="res://graphics/ui/mouse2.png" id="7_40t8l"]
[ext_resource type="Texture2D" uid="uid://cvgug41fns74w" path="res://graphics/background/main-menu/main-menu-06.png" id="8_4nypi"]
[ext_resource type="AudioStream" uid="uid://bhid0ij7idhh8" path="res://audio/music/main_menu_music.ogg" id="9_7qbsh"]
[ext_resource type="Texture2D" uid="uid://bjjbq6mcmsnq4" path="res://graphics/images/lyza-photo.PNG" id="9_ippvi"]
[ext_resource type="Texture2D" uid="uid://dc3fwm8msvp4t" path="res://graphics/images/beanie-photo.jpg" id="10_0bt71"]
[ext_resource type="Texture2D" uid="uid://m5vpo86vncwt" path="res://graphics/images/lyza-sprite.png" id="10_iensd"]
[ext_resource type="Texture2D" uid="uid://2yswy7nabin8" path="res://graphics/images/kate-photo.jpg" id="11_sdbot"]
[ext_resource type="Texture2D" uid="uid://c540bt2wadj3u" path="res://graphics/images/goobie-photo.jpeg" id="12_2chjk"]
[ext_resource type="Texture2D" uid="uid://sph3yx2igl0i" path="res://graphics/images/beanie-sprite.png" id="13_rjhee"]
[ext_resource type="Texture2D" uid="uid://ctfeypkpv8nv" path="res://graphics/background/main-menu/main-menu-12.png" id="14_7mw4p"]
[ext_resource type="Texture2D" uid="uid://c0ff4epej6bdb" path="res://graphics/images/kate-sprite.png" id="14_h2mkh"]
[ext_resource type="Texture2D" uid="uid://ccoliuh4110x2" path="res://graphics/images/goobie-sprite.png" id="16_17y8y"]
[ext_resource type="Texture2D" uid="uid://u3uupgn5riml" path="res://graphics/background/main-menu/main-menu-18.png" id="20_87w4k"]
[ext_resource type="Texture2D" uid="uid://dvf02he5rfcbk" path="res://graphics/background/main-menu/main-menu-22.png" id="24_m6ro7"]
[ext_resource type="Texture2D" uid="uid://bvy4rxiw5hqxq" path="res://graphics/background/main-menu/main-menu-24.png" id="26_rcimn"]
[ext_resource type="Texture2D" uid="uid://c3voa7barimgf" path="res://graphics/background/main-menu/main-menu-28.png" id="30_7eugn"]
[ext_resource type="Texture2D" uid="uid://8pola0f3iasp" path="res://graphics/background/main-menu/main-menu-30.png" id="32_42a8g"]
[ext_resource type="Texture2D" uid="uid://d2jocpv68f17x" path="res://graphics/background/main-menu/main-menu-32.png" id="34_4q8bv"]
[ext_resource type="Texture2D" uid="uid://gtnktdfc3i0h" path="res://graphics/background/main-menu/main-menu-33.png" id="35_4xsxp"]
[ext_resource type="Texture2D" uid="uid://bpentvnksoryf" path="res://graphics/background/main-menu/main-menu-36.png" id="38_t4g3b"]
[ext_resource type="Texture2D" uid="uid://bsetcnl1serea" path="res://graphics/ui/logo.png" id="48_7dm6b"]

[sub_resource type="SpriteFrames" id="SpriteFrames_a6gtx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2fbo2")
}, {
"duration": 1.0,
"texture": ExtResource("8_4nypi")
}, {
"duration": 1.0,
"texture": ExtResource("14_7mw4p")
}, {
"duration": 1.0,
"texture": ExtResource("20_87w4k")
}, {
"duration": 1.0,
"texture": ExtResource("24_m6ro7")
}, {
"duration": 1.0,
"texture": ExtResource("26_rcimn")
}, {
"duration": 1.0,
"texture": ExtResource("30_7eugn")
}, {
"duration": 1.0,
"texture": ExtResource("32_42a8g")
}, {
"duration": 1.0,
"texture": ExtResource("34_4q8bv")
}, {
"duration": 1.0,
"texture": ExtResource("35_4xsxp")
}, {
"duration": 1.0,
"texture": ExtResource("38_t4g3b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv4ou"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Animation" id="Animation_hfgae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5eh1t"]
resource_name = "background"
length = 1.725
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.225, 0.45, 0.675, 0.825, 0.9, 1.05, 1.125, 1.2, 1.2375, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e215g"]
_data = {
"RESET": SubResource("Animation_hfgae"),
"background": SubResource("Animation_5eh1t")
}

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pguvi")

[node name="Background" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Background"]
sprite_frames = SubResource("SpriteFrames_a6gtx")
centered = false

[node name="Title" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.197
anchor_right = 0.08
anchor_bottom = 0.197
offset_left = -1.0
offset_top = -0.479996
offset_right = 608.0
offset_bottom = 255.966
scale = Vector2(0.4, 0.4)

[node name="TextureRect" type="TextureRect" parent="Title"]
layout_mode = 2
texture = ExtResource("48_7dm6b")
stretch_mode = 5

[node name="Menu" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.688
anchor_right = 0.2
anchor_bottom = 0.688
offset_top = -50.5
offset_right = 200.0
offset_bottom = 50.5
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ControlsButton")
text = "Play"

[node name="ControlsButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
text = "Controls"

[node name="OptionsButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ControlsButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
text = "Options"

[node name="CreditsButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../ExitButton")
text = "Credits"

[node name="ExitButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[node name="Controls" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17
anchor_top = 0.637
anchor_right = 0.17
anchor_bottom = 0.75
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Controls"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Move : "
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_untr7")
stretch_mode = 2

[node name="Label2" type="Label" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "or"

[node name="TextureRect2" type="TextureRect" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_7t30x")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="Controls/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Attack : "

[node name="TextureRect2" type="TextureRect" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_6x0ik")

[node name="Label" type="Label" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "or"

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("5_trpwk")
expand_mode = 3
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="Controls/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
text = "Dodge :  "

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("4_cdgbd")
stretch_mode = 5

[node name="Label2" type="Label" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "or"

[node name="TextureRect2" type="TextureRect" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("7_40t8l")
expand_mode = 3
stretch_mode = 5

[node name="Label3" type="Label" parent="Controls/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "(while moving)"

[node name="VBoxContainer2" type="VBoxContainer" parent="Controls/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Controls/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Heal by dodging an attack!"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Controls/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="OptionsMenu" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.18
anchor_top = 0.587
anchor_right = 0.37
anchor_bottom = 0.8
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VolumeLabel" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Volume"

[node name="VolumeSlider" type="HSlider" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1

[node name="MusicToggle" type="CheckButton" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Music"

[node name="FullscreenToggle" type="CheckButton" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VsyncToggle" type="CheckButton" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "V-Sync"

[node name="BackButton" type="Button" parent="OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Art" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.25
anchor_right = 0.6
anchor_bottom = 0.25
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(10, 10)

[node name="TextureRect" type="TextureRect" parent="Art"]
layout_mode = 2
texture = ExtResource("2_6x2kw")

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Credits"]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 2
offset_left = 505.0
offset_top = 264.0
offset_right = 775.0
offset_bottom = 455.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Art - Aisha Varelas
Programming, Music - Noel Varelas"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "
Beanie Choke Art by Anonymous
SFX, Boss Music, Input Icons, Explosion Art
from opengameart.org

"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Credits/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxFlat_fv4ou")
text = "Back"

[node name="LyzaPic" type="TextureRect" parent="Credits"]
layout_mode = 1
offset_left = 143.0
offset_top = 99.0
offset_right = 1385.0
offset_bottom = 2307.0
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_ippvi")

[node name="LyzaSprite" type="Sprite2D" parent="Credits"]
position = Vector2(391, 190)
scale = Vector2(3, 3)
texture = ExtResource("10_iensd")

[node name="BeaniePic" type="TextureRect" parent="Credits"]
layout_mode = 0
offset_left = 1009.0
offset_top = 117.0
offset_right = 1309.0
offset_bottom = 517.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_0bt71")

[node name="BeanieSprite" type="Sprite2D" parent="Credits"]
position = Vector2(903, 193)
scale = Vector2(1.75, 1.75)
texture = ExtResource("13_rjhee")

[node name="KatePic" type="TextureRect" parent="Credits"]
layout_mode = 0
offset_left = 107.0
offset_top = 398.0
offset_right = 907.0
offset_bottom = 1198.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("11_sdbot")

[node name="KateSprite" type="Sprite2D" parent="Credits"]
position = Vector2(391, 476)
scale = Vector2(3, 3)
texture = ExtResource("14_h2mkh")

[node name="GoobiePic" type="TextureRect" parent="Credits"]
layout_mode = 0
offset_left = 987.0
offset_top = 409.0
offset_right = 2229.0
offset_bottom = 1651.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_2chjk")

[node name="GoobieSprite" type="Sprite2D" parent="Credits"]
position = Vector2(903, 460)
scale = Vector2(1.75, 1.75)
texture = ExtResource("16_17y8y")

[node name="LyzaLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 370.0
offset_top = 252.0
offset_right = 410.0
offset_bottom = 278.0
text = "Lyza"

[node name="BeanieLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 881.0
offset_top = 252.0
offset_right = 934.0
offset_bottom = 278.0
text = "Beanie"

[node name="KateLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 371.0
offset_top = 541.0
offset_right = 411.0
offset_bottom = 567.0
text = "Kate"

[node name="GoobieLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 879.0
offset_top = 527.0
offset_right = 934.0
offset_bottom = 553.0
text = "Goobie"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_7qbsh")
volume_db = -6.0
autoplay = true
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "background"
libraries = {
"": SubResource("AnimationLibrary_e215g")
}

[connection signal="pressed" from="Menu/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ExitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/VBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="OptionsMenu/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="OptionsMenu/VBoxContainer/MusicToggle" to="." method="_on_music_toggle_toggled"]
[connection signal="toggled" from="OptionsMenu/VBoxContainer/FullscreenToggle" to="." method="_on_fullscreen_toggle_toggled"]
[connection signal="toggled" from="OptionsMenu/VBoxContainer/VsyncToggle" to="." method="_on_vsync_toggle_toggled"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Credits/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
